// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<WithTranslationContextComponent
  translations={null}
>
  <ForgotPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "email": "E-mail",
        "resetPassword": "Reset password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="resetEmail"
            isLabelVisible={true}
            label="E-mail"
            placeholder={null}
            required={true}
            type="email"
          >
            <div
              className="root"
            >
              <label
                htmlFor="resetEmail"
              >
                <div
                  className="isLabelRequired"
                >
                  E-mail
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="resetEmail"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="email"
                />
              </label>
            </div>
          </TextField>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            isLabelVisible={true}
            label="Reset password"
            loading={false}
            priority="primary"
            size="medium"
            type="submit"
            variant="default"
          >
            <button
              className="root
                    priorityPrimary
                    sizeMedium
                    
                    
                    block"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span>
                Reset password
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </ForgotPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly 2`] = `
<WithTranslationContextComponent
  translations={
    Object {
      "email": "E-mail",
      "resetPassword": "Reset password",
    }
  }
>
  <ForgotPassword
    error={null}
    footer={null}
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title={null}
    translations={
      Object {
        "email": "E-mail",
        "resetPassword": "Reset password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="resetEmail"
            isLabelVisible={true}
            label="E-mail"
            placeholder={null}
            required={true}
            type="email"
          >
            <div
              className="root"
            >
              <label
                htmlFor="resetEmail"
              >
                <div
                  className="isLabelRequired"
                >
                  E-mail
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="resetEmail"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="email"
                />
              </label>
            </div>
          </TextField>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            isLabelVisible={true}
            label="Reset password"
            loading={false}
            priority="primary"
            size="medium"
            type="submit"
            variant="default"
          >
            <button
              className="root
                    priorityPrimary
                    sizeMedium
                    
                    
                    block"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span>
                Reset password
              </span>
            </button>
          </Button>
        </form>
      </div>
    </div>
  </ForgotPassword>
</WithTranslationContextComponent>
`;

exports[`rendering renders correctly with all props except translations 1`] = `
<WithTranslationContextComponent
  error="Error message"
  footer={
    <a
      href="http://example.com"
    >
      link
    </a>
  }
  logo="http://satyr.io/100x100/33?text=logo"
  title="Company"
  translations={null}
>
  <ForgotPassword
    error="Error message"
    footer={
      <a
        href="http://example.com"
      >
        link
      </a>
    }
    logo="http://satyr.io/100x100/33?text=logo"
    logoUrl={null}
    onChangeHandler={null}
    submitHandler={null}
    title="Company"
    translations={
      Object {
        "email": "E-mail",
        "resetPassword": "Reset password",
      }
    }
  >
    <div
      className="root"
    >
      <div
        className="title"
      >
        Company
      </div>
      <div
        className="box"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="error"
          >
            Error message
          </div>
          <TextField
            changeHandler={[Function]}
            description={null}
            disabled={false}
            error={null}
            fieldId="resetEmail"
            isLabelVisible={true}
            label="E-mail"
            placeholder={null}
            required={true}
            type="email"
          >
            <div
              className="root"
            >
              <label
                htmlFor="resetEmail"
              >
                <div
                  className="isLabelRequired"
                >
                  E-mail
                </div>
                <input
                  className="input"
                  disabled={false}
                  id="resetEmail"
                  onChange={[Function]}
                  placeholder={null}
                  required={true}
                  type="email"
                />
              </label>
            </div>
          </TextField>
          <Button
            block={true}
            clickHandler={null}
            disabled={false}
            icon={null}
            iconPosition="before"
            isLabelVisible={true}
            label="Reset password"
            loading={false}
            priority="primary"
            size="medium"
            type="submit"
            variant="default"
          >
            <button
              className="root
                    priorityPrimary
                    sizeMedium
                    
                    
                    block"
              disabled={false}
              onClick={null}
              title={null}
              type="submit"
            >
              <span>
                Reset password
              </span>
            </button>
          </Button>
        </form>
        <div
          className="footer"
        >
          <a
            href="http://example.com"
          >
            link
          </a>
        </div>
      </div>
    </div>
  </ForgotPassword>
</WithTranslationContextComponent>
`;
